finalizing emailjs and fixed modal height on small devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -134,7 +134,6 @@ section {
 /***** Portfolio Modal ****/
 #portfolio-modal1 {
     scrollbar-width: thin;
-
 }
 *::-webkit-scrollbar-thumb {
     background-color: var(--secondary);
@@ -147,6 +146,14 @@ section {
     ); */
     border-radius: 20px;
     border: 3px solid var(--primary);
+}
+.modal-inner {
+    max-height: 50rem;
+}
+@media only screen and (max-height:800px) {
+    .modal-inner {
+        max-height: 30rem;
+    }
 }
 
 /***** Pagination ****/
